--- a/src/__404.html
+++ b/src/__404.html
@@ -1,10 +1,10 @@
-@@include('_layout_head.tpl', {
+@@include('_tpl_layout_head.tpl', {
 	"title": "Типографика",
 	"pageClass": ""
 })
 <div class="wrapper">
 	<!--HEADER-->
-	@@include('_layout_header.tpl', {
+	@@include('_tpl_layout_header.tpl', {
 		"mainNavItemActive": "Типографика"
 	})
 	<!--HEADER end-->
@@ -22,15 +22,15 @@
 				<!--CONTENT end-->
 
 				<!--SIDEBAR-->
-				@@include('_layout_sidebar.tpl')
+				@@include('_tpl_layout_sidebar.tpl')
 				<!--SIDEBAR-->
 
 				<!--ASIDE-->
-				@@include('_layout_aside.tpl')
+				@@include('_tpl_layout_aside.tpl')
 				<!--ASIDE end-->
 			</div>
 		</div>
 	</div>
 	<!--MAIN end-->
 </div>
-@@include('_layout_foot.tpl')
+@@include('_tpl_layout_foot.tpl')
