--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-	<!--[if lt IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
 		<!--HEADER-->
@@ -50,24 +50,25 @@
 					<!--navigation-->
 					<div class="nav-wrap">
 						<nav class="nav">
+							<!--(1) START nav FIRST level-->
 							<ul class="nav__list nav-js">
-								<!--(1) START @@key FIRST level-->
-								<li class="has-drop">
-									<div class="nav__tab">
-										<a href="typography.html" title="nav - Пункт 1"><span>Пункт 1</span></a>
+								<!--nav item start-->
+								<li class="has-drop ">
+									<div class="nav__tab nav__tab-js">
+										<a href="typography.html" title="nav - Пункт 1 (Типографика)"><span>Пункт 1 (Типографика)</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 									<!--(2) START nav SECOND level-->
 									<div class="nav__drop nav-drop-js">
 										<ul class="sub-nav__list">
 											<li>
-												<div class="nav__tab">
+												<div class="nav__tab nav__tab-js">
 													<a href="#" title="nav - Пункт 1.1"><span>Пункт 1.1</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 											</li>
 											<li class="has-drop">
-												<div class="nav__tab">
+												<div class="nav__tab nav__tab-js">
 													<a href="#" title="nav - Пункт 1.2 (есть подпункты)"><span>Пункт 1.2 (есть подпункты)</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
@@ -75,13 +76,13 @@
 												<div class="nav__drop nav-drop-js">
 													<ul class="sub-nav__list">
 														<li>
-															<div class="nav__tab">
+															<div class="nav__tab nav__tab-js">
 																<a href="#" title="nav - Пункт 1.2.1"><span>Пункт 1.2.1</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 														</li>
 														<li class="has-drop">
-															<div class="nav__tab">
+															<div class="nav__tab nav__tab-js">
 																<a href="#" title="nav - Пункт 1.2.2 (есть подпункты)"><span>Пункт 1.2.2 (есть подпункты)</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
@@ -89,25 +90,25 @@
 															<div class="nav__drop nav-drop-js">
 																<ul class="sub-nav__list">
 																	<li>
-																		<div class="nav__tab">
+																		<div class="nav__tab nav__tab-js">
 																			<a href="#" title="nav - Пункт 1.2.2.1"><span>Пункт 1.2.2.1</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
 																	<li>
-																		<div class="nav__tab">
+																		<div class="nav__tab nav__tab-js">
 																			<a href="#" title="nav - Пункт 1.2.2.2"><span>Пункт 1.2.2.2</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
 																	<li>
-																		<div class="nav__tab">
+																		<div class="nav__tab nav__tab-js">
 																			<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
 																	</li>
 																	<li>
-																		<div class="nav__tab">
+																		<div class="nav__tab nav__tab-js">
 																			<a href="#" title="nav - Пункт 1.2.2.3"><span>Пункт 1.2.2.3</span></a>
 																			<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 																		</div>
@@ -117,13 +118,13 @@
 															<!--(4) END nav FOURTH level-->
 														</li>
 														<li>
-															<div class="nav__tab">
+															<div class="nav__tab nav__tab-js">
 																<a href="#" title="nav - Пункт 1.2.3"><span>Пункт 1.2.3</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
 														</li>
 														<li>
-															<div class="nav__tab">
+															<div class="nav__tab nav__tab-js">
 																<a href="#" title="nav - Пункт 1.2.4"><span>Пункт 1.2.4</span></a>
 																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 															</div>
@@ -133,13 +134,13 @@
 												<!--(3) END nav THIRD level-->
 											</li>
 											<li>
-												<div class="nav__tab">
+												<div class="nav__tab nav__tab-js">
 													<a href="#" title="nav - Пункт 1.4"><span>Пункт 1.4</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
 											</li>
 											<li>
-												<div class="nav__tab">
+												<div class="nav__tab nav__tab-js">
 													<a href="#" title="nav - Пункт 1.5"><span>Пункт 1.5</span></a>
 													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 												</div>
@@ -148,24 +149,66 @@
 									</div>
 									<!--(2) END nav SECOND level-->
 								</li>
-								<!--(1) END @@key FIRST level-->
-								<!--(1) START @@key FIRST level-->
+								<!--nav item end-->
+								<!--nav item start-->
 								<li class="">
-									<div class="nav__tab">
+									<div class="nav__tab nav__tab-js">
 										<a href="#" title="nav - Пункт 2"><span>Пункт 2</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 								</li>
-								<!--(1) END @@key FIRST level-->
-								<!--(1) START @@key FIRST level-->
+								<!--nav item end-->
+								<!--nav item start-->
 								<li class="">
-									<div class="nav__tab">
+									<div class="nav__tab nav__tab-js">
 										<a href="#" title="nav - Пункт 3"><span>Пункт 3</span></a>
 										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
 									</div>
 								</li>
-								<!--(1) END @@key FIRST level-->
+								<!--nav item end-->
+								<!--nav item start-->
+								<li class="has-drop">
+									<div class="nav__tab nav__tab-js">
+										<a href="#" title="nav - tt1tt"><span>tt1tt</span></a>
+										<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+									</div>
+									<!--(2) START nav SECOND level-->
+									<div class="nav__drop nav-drop-js">
+										<ul class="sub-nav__list">
+											<!--==================================================================-->
+											<!--=========================== ПРИМЕР ===============================-->
+											<!--==================================================================-->
+											<!--Чтобы лучше было видно группу пунктов в одно дропе, нужно подсветить этот дроп, введя в поиск ==========3========== -->
+											<li class="has-drop">
+												<div class="nav__tab nav__tab-js">
+													<a href="#" title="nav - tt2tt"><span>tt2tt</span></a>
+													<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+												</div>
+												<!--(3) START nav THIRD level-->
+												<div class="nav__drop nav-drop-js">
+													<ul class="sub-nav__list">
+														<li>
+															<div class="nav__tab nav__tab-js">
+																<a href="#" title="nav - tt3tt"><span>tt3tt</span></a>
+																<span class="nav__angle nav-handler-js"><i>&nbsp;</i></span>
+															</div>
+														</li>
+													</ul>
+												</div>
+												<!--(3) END nav THIRD level-->
+											</li>
+											<!--пробел ставим ТОЛЬКО после элемента с правилом "pos": "end"-->
+											<!--пример конец-->
+											<!--==================================================================-->
+											<!--=========================== ПРИМЕР конец =========================-->
+											<!--==================================================================-->
+										</ul>
+									</div>
+									<!--(2) END nav SECOND level-->
+								</li>
+								<!--nav item end-->
 							</ul>
+							<!--(1) END nav FIRST level-->
 						</nav>
 					</div>
 					<!--navigation end-->
@@ -183,9 +226,9 @@
 							<!--breadcrumbs-->
 							<div class="breadcrumbs">
 								<ul class="breadcrumbs__list">
-									<li><a href="#"><span>Главная</span></a></li>
-									<li><a href="#"><span>Категории</span></a></li>
-									<li><span>Жидкость однородно синхронизует кристалл вне зависимости от предсказаний самосогласованной теоретической модели явления</span></li>
+									<li><a href="#"><span title="Главная">Главная</span></a></li>
+									<li><a href="#"><span title="Каталог">Категории</span></a></li>
+									<li><span title="Название раздела">Название раздела</span></li>
 								</ul>
 							</div>
 							<!--breadcrumbs end-->
